--- a/hamoye.ipynb
+++ b/hamoye.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -183,6 +183,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "record_id                       0.000000\n",
+       "utility_id_ferc1                0.000000\n",
+       "report_year                     0.000000\n",
+       "plant_name_ferc1                0.000000\n",
+       "fuel_type_code_pudl             0.000000\n",
+       "fuel_unit                       0.006097\n",
+       "fuel_qty_burned                 0.000000\n",
+       "fuel_mmbtu_per_unit             0.000000\n",
+       "fuel_cost_per_unit_burned       0.000000\n",
+       "fuel_cost_per_unit_delivered    0.000000\n",
+       "fuel_cost_per_mmbtu             0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "data.isnull().sum() / len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [
@@ -227,33 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[-0.03786270759997195,\n",
-       " -0.018535416794825232,\n",
-       " -0.010033808428852969,\n",
-       " -0.00043721044397039907,\n",
-       " 0.011007403299164893,\n",
-       " 0.013599134438134063,\n",
-       " 1.0]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 24
-    }
-   ],
-   "source": [
-    "sorted(list(data.corr()['fuel_cost_per_unit_burned']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +276,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 10
     }
    ],
    "source": [
@@ -280,10 +285,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[-0.03786270759997195,\n",
+       " -0.018535416794825232,\n",
+       " -0.010033808428852969,\n",
+       " -0.00043721044397039907,\n",
+       " 0.011007403299164893,\n",
+       " 0.013599134438134063,\n",
+       " 1.0]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "sorted(list(data.corr()['fuel_cost_per_unit_burned']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "       utility_id_ferc1   report_year  fuel_qty_burned  fuel_mmbtu_per_unit  \\\n",
+       "count      29523.000000  29523.000000     2.952300e+04         29523.000000   \n",
+       "mean         118.601836   2005.806050     2.622119e+06             8.492111   \n",
+       "std           74.178353      7.025483     9.118004e+06            10.600220   \n",
+       "min            1.000000   1994.000000     1.000000e+00             0.000001   \n",
+       "25%           55.000000   2000.000000     1.381700e+04             1.024000   \n",
+       "50%          122.000000   2006.000000     2.533220e+05             5.762694   \n",
+       "75%          176.000000   2012.000000     1.424034e+06            17.006000   \n",
+       "max          514.000000   2018.000000     5.558942e+08           341.260000   \n",
+       "\n",
+       "       fuel_cost_per_unit_burned  fuel_cost_per_unit_delivered  \\\n",
+       "count               29523.000000                  2.952300e+04   \n",
+       "mean                  208.649031                  9.175704e+02   \n",
+       "std                  2854.490090                  6.877593e+04   \n",
+       "min                  -276.080000                 -8.749370e+02   \n",
+       "25%                     5.207000                  3.778500e+00   \n",
+       "50%                    26.000000                  1.737100e+01   \n",
+       "75%                    47.113000                  4.213700e+01   \n",
+       "max                139358.000000                  7.964521e+06   \n",
+       "\n",
+       "       fuel_cost_per_mmbtu  \n",
+       "count         29523.000000  \n",
+       "mean             19.304354  \n",
+       "std            2091.540939  \n",
+       "min             -41.501000  \n",
+       "25%               1.940000  \n",
+       "50%               4.127000  \n",
+       "75%               7.745000  \n",
+       "max          359278.000000  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>utility_id_ferc1</th>\n      <th>report_year</th>\n      <th>fuel_qty_burned</th>\n      <th>fuel_mmbtu_per_unit</th>\n      <th>fuel_cost_per_unit_burned</th>\n      <th>fuel_cost_per_unit_delivered</th>\n      <th>fuel_cost_per_mmbtu</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>29523.000000</td>\n      <td>29523.000000</td>\n      <td>2.952300e+04</td>\n      <td>29523.000000</td>\n      <td>29523.000000</td>\n      <td>2.952300e+04</td>\n      <td>29523.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>118.601836</td>\n      <td>2005.806050</td>\n      <td>2.622119e+06</td>\n      <td>8.492111</td>\n      <td>208.649031</td>\n      <td>9.175704e+02</td>\n      <td>19.304354</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>74.178353</td>\n      <td>7.025483</td>\n      <td>9.118004e+06</td>\n      <td>10.600220</td>\n      <td>2854.490090</td>\n      <td>6.877593e+04</td>\n      <td>2091.540939</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>1.000000</td>\n      <td>1994.000000</td>\n      <td>1.000000e+00</td>\n      <td>0.000001</td>\n      <td>-276.080000</td>\n      <td>-8.749370e+02</td>\n      <td>-41.501000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>55.000000</td>\n      <td>2000.000000</td>\n      <td>1.381700e+04</td>\n      <td>1.024000</td>\n      <td>5.207000</td>\n      <td>3.778500e+00</td>\n      <td>1.940000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>122.000000</td>\n      <td>2006.000000</td>\n      <td>2.533220e+05</td>\n      <td>5.762694</td>\n      <td>26.000000</td>\n      <td>1.737100e+01</td>\n      <td>4.127000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>176.000000</td>\n      <td>2012.000000</td>\n      <td>1.424034e+06</td>\n      <td>17.006000</td>\n      <td>47.113000</td>\n      <td>4.213700e+01</td>\n      <td>7.745000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>514.000000</td>\n      <td>2018.000000</td>\n      <td>5.558942e+08</td>\n      <td>341.260000</td>\n      <td>139358.000000</td>\n      <td>7.964521e+06</td>\n      <td>359278.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "report_year\n",
+       "1994       63.636060\n",
+       "1995       32.735269\n",
+       "1996     9196.705948\n",
+       "1997    11140.197239\n",
+       "1998      287.154420\n",
+       "1999       25.551627\n",
+       "2000      985.362877\n",
+       "2001       60.050396\n",
+       "2002       47.594361\n",
+       "2003       55.663493\n",
+       "2004      139.524275\n",
+       "2005       41.438184\n",
+       "2006       38.657484\n",
+       "2007       43.325023\n",
+       "2008       58.588197\n",
+       "2009      652.694163\n",
+       "2010       91.862105\n",
+       "2011       59.774667\n",
+       "2012       60.994502\n",
+       "2013      172.307591\n",
+       "2014      192.737183\n",
+       "2015      326.535511\n",
+       "2016      103.901761\n",
+       "2017       46.196861\n",
+       "2018      499.269966\n",
+       "Name: fuel_cost_per_unit_delivered, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "data.groupby('report_year')['fuel_cost_per_unit_delivered'].mean()"
+   ]
   },
   {
    "cell_type": "code",
@@ -339,146 +458,6 @@
    "source": [
     "data.groupby('fuel_type_code_pudl').nth(0)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fuel_df1 = data.iloc[0:19000].reset_index(drop=True)\n",
-    "fuel_df2 = data.iloc[19000:].reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "                     record_id  utility_id_ferc1  report_year  \\\n",
-       "0        f1_fuel_1994_12_1_0_7                 1         1994   \n",
-       "1       f1_fuel_1994_12_1_0_10                 1         1994   \n",
-       "2        f1_fuel_1994_12_2_0_1                 2         1994   \n",
-       "3        f1_fuel_1994_12_2_0_7                 2         1994   \n",
-       "4       f1_fuel_1994_12_2_0_10                 2         1994   \n",
-       "...                        ...               ...          ...   \n",
-       "29518  f1_fuel_2018_12_12_0_13                12         2018   \n",
-       "29519   f1_fuel_2018_12_12_1_1                12         2018   \n",
-       "29520  f1_fuel_2018_12_12_1_10                12         2018   \n",
-       "29521  f1_fuel_2018_12_12_1_13                12         2018   \n",
-       "29522  f1_fuel_2018_12_12_1_14                12         2018   \n",
-       "\n",
-       "           plant_name_ferc1 fuel_type_code_pudl fuel_unit  fuel_qty_burned  \\\n",
-       "0                  rockport                coal       ton        5377489.0   \n",
-       "1      rockport total plant                coal       ton       10486945.0   \n",
-       "2                    gorgas                coal       ton        2978683.0   \n",
-       "3                     barry                coal       ton        3739484.0   \n",
-       "4                 chickasaw                 gas       mcf          40533.0   \n",
-       "...                     ...                 ...       ...              ...   \n",
-       "29518    neil simpson ct #1                 gas       mcf          18799.0   \n",
-       "29519  cheyenne prairie 58%                 gas       mcf         806730.0   \n",
-       "29520     lange ct facility                 gas       mcf         104554.0   \n",
-       "29521       wygen 3 bhp 52%                coal       ton         315945.0   \n",
-       "29522       wygen 3 bhp 52%                 gas       mcf          17853.0   \n",
-       "\n",
-       "       fuel_mmbtu_per_unit  fuel_cost_per_unit_burned  \\\n",
-       "0                   16.590                      18.59   \n",
-       "1                   16.592                      18.58   \n",
-       "2                   24.130                      39.72   \n",
-       "3                   23.950                      47.21   \n",
-       "4                    1.000                       2.77   \n",
-       "...                    ...                        ...   \n",
-       "29518                1.059                       4.78   \n",
-       "29519                1.050                       3.65   \n",
-       "29520                1.060                       4.77   \n",
-       "29521               16.108                       3.06   \n",
-       "29522                1.059                       0.00   \n",
-       "\n",
-       "       fuel_cost_per_unit_delivered  fuel_cost_per_mmbtu  \n",
-       "0                             18.53                1.121  \n",
-       "1                             18.53                1.120  \n",
-       "2                             38.12                1.650  \n",
-       "3                             45.99                1.970  \n",
-       "4                              2.77                2.570  \n",
-       "...                             ...                  ...  \n",
-       "29518                          4.78                9.030  \n",
-       "29519                          3.65                6.950  \n",
-       "29520                          4.77                8.990  \n",
-       "29521                         14.76                1.110  \n",
-       "29522                          0.00               11.680  \n",
-       "\n",
-       "[29523 rows x 11 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>record_id</th>\n      <th>utility_id_ferc1</th>\n      <th>report_year</th>\n      <th>plant_name_ferc1</th>\n      <th>fuel_type_code_pudl</th>\n      <th>fuel_unit</th>\n      <th>fuel_qty_burned</th>\n      <th>fuel_mmbtu_per_unit</th>\n      <th>fuel_cost_per_unit_burned</th>\n      <th>fuel_cost_per_unit_delivered</th>\n      <th>fuel_cost_per_mmbtu</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>f1_fuel_1994_12_1_0_7</td>\n      <td>1</td>\n      <td>1994</td>\n      <td>rockport</td>\n      <td>coal</td>\n      <td>ton</td>\n      <td>5377489.0</td>\n      <td>16.590</td>\n      <td>18.59</td>\n      <td>18.53</td>\n      <td>1.121</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>f1_fuel_1994_12_1_0_10</td>\n      <td>1</td>\n      <td>1994</td>\n      <td>rockport total plant</td>\n      <td>coal</td>\n      <td>ton</td>\n      <td>10486945.0</td>\n      <td>16.592</td>\n      <td>18.58</td>\n      <td>18.53</td>\n      <td>1.120</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>f1_fuel_1994_12_2_0_1</td>\n      <td>2</td>\n      <td>1994</td>\n      <td>gorgas</td>\n      <td>coal</td>\n      <td>ton</td>\n      <td>2978683.0</td>\n      <td>24.130</td>\n      <td>39.72</td>\n      <td>38.12</td>\n      <td>1.650</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>f1_fuel_1994_12_2_0_7</td>\n      <td>2</td>\n      <td>1994</td>\n      <td>barry</td>\n      <td>coal</td>\n      <td>ton</td>\n      <td>3739484.0</td>\n      <td>23.950</td>\n      <td>47.21</td>\n      <td>45.99</td>\n      <td>1.970</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>f1_fuel_1994_12_2_0_10</td>\n      <td>2</td>\n      <td>1994</td>\n      <td>chickasaw</td>\n      <td>gas</td>\n      <td>mcf</td>\n      <td>40533.0</td>\n      <td>1.000</td>\n      <td>2.77</td>\n      <td>2.77</td>\n      <td>2.570</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>29518</th>\n      <td>f1_fuel_2018_12_12_0_13</td>\n      <td>12</td>\n      <td>2018</td>\n      <td>neil simpson ct #1</td>\n      <td>gas</td>\n      <td>mcf</td>\n      <td>18799.0</td>\n      <td>1.059</td>\n      <td>4.78</td>\n      <td>4.78</td>\n      <td>9.030</td>\n    </tr>\n    <tr>\n      <th>29519</th>\n      <td>f1_fuel_2018_12_12_1_1</td>\n      <td>12</td>\n      <td>2018</td>\n      <td>cheyenne prairie 58%</td>\n      <td>gas</td>\n      <td>mcf</td>\n      <td>806730.0</td>\n      <td>1.050</td>\n      <td>3.65</td>\n      <td>3.65</td>\n      <td>6.950</td>\n    </tr>\n    <tr>\n      <th>29520</th>\n      <td>f1_fuel_2018_12_12_1_10</td>\n      <td>12</td>\n      <td>2018</td>\n      <td>lange ct facility</td>\n      <td>gas</td>\n      <td>mcf</td>\n      <td>104554.0</td>\n      <td>1.060</td>\n      <td>4.77</td>\n      <td>4.77</td>\n      <td>8.990</td>\n    </tr>\n    <tr>\n      <th>29521</th>\n      <td>f1_fuel_2018_12_12_1_13</td>\n      <td>12</td>\n      <td>2018</td>\n      <td>wygen 3 bhp 52%</td>\n      <td>coal</td>\n      <td>ton</td>\n      <td>315945.0</td>\n      <td>16.108</td>\n      <td>3.06</td>\n      <td>14.76</td>\n      <td>1.110</td>\n    </tr>\n    <tr>\n      <th>29522</th>\n      <td>f1_fuel_2018_12_12_1_14</td>\n      <td>12</td>\n      <td>2018</td>\n      <td>wygen 3 bhp 52%</td>\n      <td>gas</td>\n      <td>mcf</td>\n      <td>17853.0</td>\n      <td>1.059</td>\n      <td>0.00</td>\n      <td>0.00</td>\n      <td>11.680</td>\n    </tr>\n  </tbody>\n</table>\n<p>29523 rows × 11 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 26
-    }
-   ],
-   "source": [
-    "pd.merge(fuel_df1, fuel_df2, how=\"outer\", on='fuel_unit')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = [1,2,3]\n",
-    "b = [4,5,6]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "c = a.append(b)\n",
-    "print(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([[1., 0., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 0., 1.]])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 7
-    }
-   ],
-   "source": [
-    "np.identity(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
